--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.12.1",
     "next": "12.3.1",
+    "next-auth": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
